--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="buildacharlight">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./viking_icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Build-a-char</title>
   </head>
